[workspace]
members = ["bin", "day1"]
resolver = "2"

[profile.dev]
debug = true

[workspace.lints.clippy]
correctness = "warn"
suspicious = "warn"
complexity = "warn"
perf = "warn"
style = "warn"
pedantic = "warn"
multiple_crate_versions = { level = "allow", priority = 1 }
cast_possible_truncation = { level = "allow", priority = 1 }
cast_precision_loss = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
struct_field_names = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }
