[workspace]
members = ["bin", "helpers"]
resolver = "2"

[profile.dev]
debug = true

[workspace.lints.clippy]
correctness = "warn"
suspicious = "warn"
complexity = "warn"
perf = "warn"
style = "warn"
pedantic = "warn"
missing_panics_doc = { level = "allow", priority = 1 }

[workspace.dependencies]
helpers = { version = "0.2.0", path = "../solution/helpers" }
